tests/positive/Termination/Mutual.juvix
module Mutual;

axiom A : Type;

terminating
f : A -> A -> A
  
  | x y := g x (f x x);

terminating
g : A -> A -> A
  | x y := f x x;
