tests/negative/Termination/TerminatingF.juvix
module TerminatingF;

axiom A : Type;

terminating
f : A -> A -> A
  
  | x y := g x (f x x);

g : A -> A -> A
  | x y := f x x;

